--- a/03-Spring-boot-Hibernate-jpa-crud/01-cruddemo-jpa/src/main/resources/application.properties
+++ b/03-Spring-boot-Hibernate-jpa-crud/01-cruddemo-jpa/src/main/resources/application.properties
@@ -7,3 +7,15 @@ spring.main.banner-mode=off
 
 #Reduce loggin level. Set loggin level to warn
 logging.level.root=warn
+
+#Add logging configs to display SQL statements
+
+logging.level.org.hibernate.sql=debug
+logging.level.org.hibernate.orm.jdbc.bind = trace
+
+
+# Configure JPDA/hibernate to auto create the tables
+# the "update" config will keep existing data in the table
+spring.jpa.hibernate.ddl-auto=update
+
+
