--- a/04-Spring-Boot-Rest-CRUD/04-spring-boot-rest-crud-employee-with-spring-data-rest/pom.xml
+++ b/04-Spring-Boot-Rest-CRUD/04-spring-boot-rest-crud-employee-with-spring-data-rest/pom.xml
@@ -21,6 +21,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+<!--        Add dependency for Spring Data Rest  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-rest</artifactId>
