--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/application.properties
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/application.properties
@@ -2,5 +2,5 @@
 # JDBC properties
 #
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
-spring.datasource.username=root
-spring.datasource.password=fayaz@2000
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
