--- a/04-Spring-Boot-Rest-CRUD/03-spring-boot-rest-crud-employee-with-spring-data-jpa/src/main/resources/application.properties
+++ b/04-Spring-Boot-Rest-CRUD/03-spring-boot-rest-crud-employee-with-spring-data-jpa/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 #JDBC properties
 spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory
-spring.datasource.username=springstudent
-spring.datasource.password=springstudent
+#spring.datasource.username=springstudent
+#spring.datasource.password=springstudent
+spring.datasource.username=root
+spring.datasource.password=fayaz@2000
